<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">NewsSource</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="button_one">ZeroLinux5</string>
    <string name="button_two">Hacker News</string>
    <string name="button_three">Ubuntu Vibes</string>
    <string name="share">Share</string>
    <string name="menu">Menu</string>
    <string name="title_activity_menu">MenuActivity</string>
    <string name="enter">Replace News Source</string>
    <string name="radio_one">1st</string>
    <string name="radio_two">2nd</string>
    <string name="radio_three">3rd</string>
    <string name="url">Enter URL</string>
    <string name="name">Title: </string>
    <string name="default_1">http://www.zerolinux5.com/</string>
    <string name="default_2">http://news.ycombinator.com/</string>
    <string name="default_3">http://www.ubuntuvibes.com/</string>
    <string name="prefix">http://</string>
    <string name="title_activity_buttons_screen">ButtonsScreen</string>
    <string name="settings">Settings</string>

</resources>